--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,15 @@ development:
   host: localhost
   username: postgres
   password: "Vokythoai1"
+production:
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
+  database: < %=ENV['OPENSHIFT_APPNAME']%>
+  host: < %=ENV['$OPENSHIFT_POSTGRESQL_DB_HOST']%>
+  port: < %=ENV['$OPENSHIFT_POSTGRESQL_DB_PORT']%>
+  username: < %=ENV['OPENSHIFT_POSTGRESQL_DB_USERNAME']%>
+  password: < %=ENV['OPENSHIFT_POSTGRESQL_DB_PASSWORD']%>
 
   # Warning: The database defined as "test" will be erased and
   # re-generated from your development database when you run "rake".
